# ros2_mecanum_navigation

./: CMakeLists.txt  README.md  package.xml
scripts/: mecanum_sim.py
src/: mecanum_navigation_node.cpp
